# requests

./: .gitignore  Pipfile  pyproject.toml
src/requests/: __init__.py  __version__.py  _internal_utils.py  adapters.py  api.py  auth.py  certs.py  compat.py  help.py  models.py  packages.py  sessions.py  status_codes.py  structures.py  utils.py
